Anonymous | Login | 2021-01-19 02:28 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0027061 | Community | [OCCT] OCCT:Configuration | public | 2016-01-06 10:43 | 2016-04-20 15:50 | ||||
Reporter | martinsiggel | ||||||||
Assigned To | abv | ||||||||
Priority | normal | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | GCC 4.3.4 | OS | Linux, SLED | OS Version | 11 SP2 | ||||
Product Version | [OCCT] 7.0.0 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0027061: Compile failure due to BOM in OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx | ||||||||
Description | The file OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx contains a BOM (Byte Order Mark). Some compilers (such as gcc 4.3.4 on SLED 11) can not deal with files with BOM. A simple removal of the BOM fixes the compilation issues. | ||||||||
Steps To Reproduce | Compile on old gcc (e.g. 4.3.4) | ||||||||
Tags | No tags attached. | ||||||||
Test case number | |||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0049699) git (administrator) 2016-01-06 12:25 |
Branch CR0027061 has been created by martinsiggel. SHA-1: f2b4947419c91cd5e36a0fb81972cf2a5fca2a19 Detailed log of new commits: Author: Martin Siggel Date: Wed Jan 6 10:24:43 2016 +0100 0027061: Fixed compilation issue due to BOM The byte order mark (BOM) in src/OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx prevented compilation on some gcc compilers. I removed the BOM, which fixes compilation. |
(0052930) git (administrator) 2016-04-17 13:46 |
Branch CR0027061 has been deleted by kgv. SHA-1: f2b4947419c91cd5e36a0fb81972cf2a5fca2a19 |
![]() |
|||
occt: master 39fb68ad
Timestamp: 2016-01-06 09:24:43 Author: abv Committer: abv [ Details ] [ Diff ] |
0027061: Fixed compilation issue due to BOM The byte order mark (BOM) in src/OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx prevented compilation on some gcc compilers. I removed the BOM, which fixes compilation. |
||
mod - src/OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2016-01-06 10:43 | martinsiggel | New Issue | |
2016-01-06 10:43 | martinsiggel | Assigned To | => kgv |
2016-01-06 10:59 | kgv | Category | OCCT:Coding => OCCT:Configuration |
2016-01-06 12:25 | git | Note Added: 0049699 | |
2016-01-06 12:29 | martinsiggel | Assigned To | kgv => bugmaster |
2016-01-06 12:29 | martinsiggel | Status | new => resolved |
2016-01-06 12:29 | martinsiggel | Steps to Reproduce Updated | View Revisions |
2016-01-06 12:58 | kgv | Relationship added | child of 0026792 |
2016-01-06 12:58 | kgv | Status | resolved => reviewed |
2016-01-11 12:01 | apv | Assigned To | bugmaster => apv |
2016-01-11 12:19 | apv | Assigned To | apv => bugmaster |
2016-01-15 16:57 | abv | Changeset attached | => occt master 39fb68ad |
2016-01-15 16:57 | abv | Assigned To | bugmaster => abv |
2016-01-15 16:57 | abv | Status | reviewed => verified |
2016-01-15 16:57 | abv | Resolution | open => fixed |
2016-04-17 13:46 | git | Note Added: 0052930 | |
2016-04-20 15:43 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:50 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |