0027061: Fixed compilation issue due to BOM

The byte order mark (BOM) in src/OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx
prevented compilation on some gcc compilers. I removed the BOM, which
fixes compilation.